fixed gap between NFT images slider

--- a/src/App.css
+++ b/src/App.css
@@ -456,7 +456,7 @@ body {
 }
 
 .nft-image {
-  width: 350px;
+  width: 230px;
   height: auto;
   border-radius: 12px;
 }
